testsuite/tests/grammar/invalid_lexers/token_action_2.lkt
from common import Example

lexer foo_lexer {
    @text(1) Example <- "example"
}
